--- a/channel-manager/frontend-ng/src/angularjs/channel/sidePanels/rightSidePanel/rightSidePanel.scss
+++ b/channel-manager/frontend-ng/src/angularjs/channel/sidePanels/rightSidePanel/rightSidePanel.scss
@@ -39,6 +39,10 @@ right-side-panel {
   &.in-resize {
     user-select: none;
   }
+
+  .edit-title-toolbar {
+    z-index: 2 !important;
+  }
 }
 
 .right-side-panel {
